[package]
name = "gql"
version = "0.1.0"
authors = ["Ng Guoyou <ng.guoyou@gmail.com>"]

[dependencies]
juniper = { git = "https://github.com/graphql-rust/juniper" }
juniper_rocket = { git = "https://github.com/graphql-rust/juniper_rocket" }
rocket = "0.3.3"
rocket_codegen = "0.3.3"
diesel = { version = "0.13.0", features = ["sqlite"] }
diesel_codegen = { version = "0.13.0", features = ["sqlite"] }
dotenv = "0.9.0"
r2d2 = "*"
r2d2-diesel = "*"
rocket_cors = "0.2.0"
